--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
+.card-collection{
+	display:grid;
+	grid-template-columns: 1fr 1fr 1fr;
+}
